added more code changes

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
 		<!-- Dependency added for drools-decisiontables -->
 		<dependency>
 			<groupId>org.drools</groupId>
