--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<kie.version>7.0.0.Final</kie.version>
+		<drools-version>7.0.0.Final</drools-version>
 	</properties>
 
 	<dependencies>
@@ -55,13 +55,24 @@
 		<dependency>
 			<groupId>org.drools</groupId>
 			<artifactId>drools-decisiontables</artifactId>
-			<version>${kie.version}</version>
+			<version>${drools-version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.drools</groupId>
+			<artifactId>drools-core</artifactId>
+			<version>${drools-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.drools</groupId>
+			<artifactId>drools-compiler</artifactId>
+			<version>${drools-version}</version>
 		</dependency>
 		<!-- Dependency added for Kie -->
 		<dependency>
 			<groupId>org.kie</groupId>
 			<artifactId>kie-ci</artifactId>
-			<version>${kie.version}</version>
+			<version>${drools-version}</version>
 		</dependency>
 	</dependencies>
 
